--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We need to register your Email Id to sent you password reset instructions:"
+            android:text="We need to register your Email Id to send you password reset instructions:"
             android:textSize="25sp"
             android:textColor="@android:color/holo_green_light"/>
     </LinearLayout>
