--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -132,7 +132,7 @@
                 android:gravity="center_horizontal"
                 android:padding="20dp"
                 android:text="Next"
-               />
+               android:onClick="goToSignInMedicalFile"/>
 
         </LinearLayout>
 
