Medical App Login

--- a/app/src/main/res/layout/activity_signinmedicalfile.xml
+++ b/app/src/main/res/layout/activity_signinmedicalfile.xml
@@ -155,8 +155,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Sign in"
-        android:onClick="goToFeedActivity"/>
+        android:text="Sign up"
+        android:onClick="goToAppointmentChanger"/>
 
 
 </LinearLayout>
