--- a/app/src/main/res/layout/activity_appointmentchanger.xml
+++ b/app/src/main/res/layout/activity_appointmentchanger.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginTop="50dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -34,56 +35,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Password"
+            android:text="Whitch appointment would you like to change?"
             android:textSize="30sp" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+            android:inputType="text" />
     </LinearLayout>
 
 
     <Button
+        android:id="@+id/buttonapp"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Log in"
-        android:onClick="goToFeedActivity" />
+        android:text="Send"
+        android:onClick="SendaMessage" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10sp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="If you don't have an account yet"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Sign up"
-            android:textSize="15sp"
-            android:onClick="goToSignInActivity"/>
     </LinearLayout>
-
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:text="Forgot your password?"
-        android:textSize="20dp"
-        android:onClick="goToForgotPasswordActivity"
-        android:textColor="@android:color/holo_green_dark"/>
-
-
-
-</LinearLayout>
