--- a/app/src/main/res/layout/activity_doctorsignin.xml
+++ b/app/src/main/res/layout/activity_doctorsignin.xml
@@ -86,6 +86,10 @@
                 android:layout_height="wrap_content"
                 android:text="Birth date"
                 android:textSize="30sp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="date"/>
 
 
         </LinearLayout>
@@ -131,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:padding="20dp"
-                android:text="Sign in"
+                android:text="Sign up"
                 android:onClick="goToDoctorFeedActivity"/>
 
         </LinearLayout>
