--- a/app/src/main/res/layout/activity_logindoctor.xml
+++ b/app/src/main/res/layout/activity_logindoctor.xml
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Sign in"
+            android:text="Sign up"
             android:textSize="15sp"
             android:onClick="goToSignInDoctorActivity"/>
     </LinearLayout>
